# cdss_system

./: .dockerignore  .env.example  .gitignore  DEVOPS.md  README.md  docker-compose.yml  sonar-project.properties
cdss_professional/cdss_professional_v4181_patch22_multikg_evidence_validation_exact_fix/: .dockerignore  .env.example  API_FRONTEND_INTEGRATION_ALIAS_PATCH_REPORT.md  CDSS_FINAL_RUNTIME_INTEGRATION_PATCH.md  CDSS_PATCH22_EXACT_SOURCE_FIX_VERSION.txt  CDSS_PATCH22_SAFETY_BENCHMARK_FIX_VERSION.txt  Dockerfile  HYBRID_EXTRACTION_PLANNER_IMPLEMENTATION.md  Makefile  PATCH13_BENCHMARK_LOGIC_HARDENING_REPORT.md  PATCH14_MEDIQA_OE_QWEN_EXTRACTION_REPORT.md  PATCH15_PLANNER_MEDIQA_OE_HARDENING_REPORT.md  PATCH16_DYNAMIC_QWEN_MEDIQA_OE_HARDENING_REPORT.md  PATCH17_STRICT_CLINICAL_CONTRACTS_REPORT.md  PATCH18_BUSINESS_LOGIC_CORE_REPORT.md  PATCH19_HUMAN_IN_LOOP_MONITORING_REPORT.md  PATCH20_RELEASE_STABILIZATION_REPORT.md  PATCH21_MULTIKG_KAGGLE_HOTFIX_REPORT.md  PATCH21_MULTIKG_RETRIEVER_REPORT.md  PATCH21_PROFESSIONAL_STABILIZATION_REPORT.md  PATCH21_TEST_REPORT.txt  PATCH22_KAGGLE_EXACT_SOURCE_FIX_REPORT.txt  PATCH22_KG_VECTOR_ASSET_FIX_REPORT.txt  PATCH22_MULTIKG_EVIDENCE_VALIDATION_REPORT.txt  PATCH22_MULTIKG_KAGGLE_SOURCE_FIX_REPORT.txt  PATCH22_SAFETY_BENCHMARK_QUALITY_FIX_REPORT.txt  PATCH23_TN_MED_DB_V1_INTEGRATION_REPORT.md  PATCH24_TN_MED_SEARCH_RUNTIME_FIX_REPORT.md  PATCH5_IMPLEMENTATION_REPORT.md  PATCH6_IMPLEMENTATION_REPORT.md  PATCH8_FEEDBACK_LAYER_REPORT.md  PATCH_APPLIED_REPORT.md  PATCH_REAL_KAGGLE_RUNTIME_PRIMARY_REPORT.md  README.md  collected.txt  (+8 more)
(+534 files in other folders)
