[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-prescription-system-tunisia"
version = "4.18.1"
description = "Clinician-in-the-loop Tunisian outpatient prescription CDSS runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sentence-transformers>=3.0.0",
  "transformers>=4.44.0",
  "torch>=2.2.0",
  "accelerate>=0.33.0",
  "safetensors>=0.4.3",
  "faiss-cpu>=1.13.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "kuzu>=0.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["apps*", "services*", "libs*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[project.scripts]
cdss-notebook-symbols = "tools.extract_notebook_symbols:main"
cdss-demo = "apps.cli.run_demo:main"
